--- a/src/DotNetAtlas.Api/Pages/Index.cshtml
+++ b/src/DotNetAtlas.Api/Pages/Index.cshtml
@@ -16,6 +16,8 @@
 <h3>Deployment: @Model.Deployment</h3>
 <h3>@Model.Language</h3>
 
+<h3><a href="/swagger">Swagger</a></h3>
+
 @if (Model.IsLocal)
 {
     <br/>
