feat: Implement Forecast caching using Redis + FusionCache, add Redis and RedisInsight to docker-compose, pin concrete versions instead of latest

--- a/src/DotNetAtlas.Api/Pages/Index.cshtml
+++ b/src/DotNetAtlas.Api/Pages/Index.cshtml
@@ -23,6 +23,12 @@
     <br/>
     <h2>Docker compose services:</h2>
     <h3><a href="http://localhost:5341/#/events?range=3h" target="_blank" rel="noopener noreferrer">Seq</a></h3>
+    <h3>
+        <a href="http://localhost:5540/484a0520-f569-45ea-a027-909b81903784/browser" target="_blank" rel="noopener noreferrer">
+            Redis Insight
+        </a>
+        (connect to "redis12346:6379" - db 0)
+    </h3>
     <h3><a href="http://localhost:16686/jaeger/ui/search" target="_blank" rel="noopener noreferrer">Jaeger</a></h3>
     <h3><a href="http://localhost:3000/dashboards" target="_blank" rel="noopener noreferrer">Grafana</a></h3>
     <h3><a href="http://localhost:9090/query" target="_blank" rel="noopener noreferrer">Prometheus</a></h3>
