feat: DB, API and FusionAuth Health Checks (+ UI), Prometheus exporter and scrape job, Grafana Dashboard

--- a/src/DotNetAtlas.Api/Pages/Index.cshtml
+++ b/src/DotNetAtlas.Api/Pages/Index.cshtml
@@ -17,6 +17,7 @@
 <h3>@Model.Language</h3>
 
 <h3><a href="/swagger">Swagger</a></h3>
+<h3><a href="/healthchecks-ui" target="_blank" rel="noopener noreferrer">Health Checks UI</a></h3>
 
 @if (Model.IsLocal)
 {
